[in_progres] Добавил скелет основных классов

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,9 @@ set (EXE_NAME   hash_count)
 
 set (SRC_FILES 
 				common.cpp
-				AppOptions.cpp
+                AppOptions.cpp
+                ProcessManager.cpp
+                ProcessWCount.cpp
 				main.cpp
 				)
 
