[in_progress|feature] Добавил пороверку наиналичие файла. Изменил алгоритм поиска количества вхождений слов в файл.
- Теперь в опции входит информация о размере файла.
- При получении на вход имени не существующего файла будет брошено исключение.
- Алгоритм поиска слова теперь не требует дополнительной строки для накопления символов.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,6 +66,7 @@ set_target_properties(${EXE_NAME} PROPERTIES
 target_link_libraries(${EXE_NAME}
 	${Boost_LIBRARIES}
     Threads::Threads
+    stdc++fs
 )
 
 
