--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,46 +1,43 @@
 cmake_minimum_required(VERSION 3.9)
-project(Test_task_2GIS VERSION 0.1.0)
+project(Test_task_2GIS VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(Threads REQUIRED)
 find_package(Boost COMPONENTS 
                               program_options 
-                              filesystem 
                               REQUIRED)
 
-get_property(USE_TSAN GLOBAL PROPERTY USE_TSAN)
 get_property(USE_ASAN GLOBAL PROPERTY USE_ASAN)
-get_property(USE_TEST GLOBAL PROPERTY USE_TEST)
 
-
-# include_directories(${PROJECT_SOURCE_DIR}/src/include) # не работает ...
-set (EXE_NAME   hash_count)
+set (EXE_NAME   fileWorker)
 
 set (SRC_FILES 
-				common.cpp
+                StateWordCounter/EndScope.cpp
+                StateWordCounter/BeginScope.cpp
+                StateWordCounter/PEndMarks.cpp
+				StateWordCounter/Context.cpp
+				StateWordCounter/Miscellanea.cpp
+				StateWordCounter/NewWord.cpp
+				StateWordCounter/Resembling.cpp
                 AppOptions.cpp
-                ProcessManager.cpp
-                ProcessWCount.cpp
-                ProcessCRC.cpp
+                WorkerManager.cpp
+				WorkerWCount.cpp
+				WorkerStateWCount.cpp
+                WorkerCRC.cpp
 				main.cpp
 				)
 
 add_executable(${EXE_NAME}  ${SRC_FILES})
 
+target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 set(CMP_OPTIONS "-pthread;-Wpedantic;-Wall;-Wextra")
 set(L_FLAGS "")
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
-    target_compile_definitions( ${EXE_NAME}  PUBLIC -DDEBUG)  # -D removed
+    target_compile_definitions( ${EXE_NAME}  PUBLIC -DDEBUG)
     list(APPEND CMP_OPTIONS "-g")
-
-    if(USE_TSAN)
-        message("[SRC] LTASN IN USE")
-        list(APPEND CMP_OPTIONS "-fsanitize=thread")
-        list(APPEND L_FLAGS "-fsanitize=thread")
-    endif()
 
     if(USE_ASAN)
         message("[SRC] LASAN IN USE")
@@ -50,7 +47,7 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
         list(APPEND CMP_OPTIONS "-fsanitize=leak")
     endif()
 
-    message("debug")
+    message("DEBUG")
 endif()
 
 set_target_properties(${EXE_NAME} PROPERTIES
@@ -58,9 +55,6 @@ set_target_properties(${EXE_NAME} PROPERTIES
     CXX_STANDARD_REQUIRED ON
     COMPILE_OPTIONS "${CMP_OPTIONS}"
     LINK_FLAGS "${L_FLAGS}"
-
-    # LINK_FLAGS "-fsanitize=address"
-    # LINK_FLAGS "-fsanitize=leak"
 )
 
 target_link_libraries(${EXE_NAME}
@@ -68,11 +62,3 @@ target_link_libraries(${EXE_NAME}
     Threads::Threads
     stdc++fs
 )
-
-
-# include(CTest)
-# enable_testing()
-
-# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-# include(CPack)
